# janus-poc

./: .gitignore  AGENTS.md  CLAUDE.md  PROMPT_build.md  RALPH_PROMPT.md  README.md  docker-compose.yml  history.md  pyproject.toml  render.yaml  spec_generator.md
baseline/: README.md  pyproject.toml
baseline-agent-cli/: Dockerfile  README.md  pyproject.toml
baseline-langchain/: Dockerfile  README.md  pyproject.toml
baseline-langchain/janus_baseline_langchain/: __init__.py  agent.py  config.py  main.py  streaming.py  tracing.py
baseline-langchain/janus_baseline_langchain/middleware/: tracing.py
baseline-langchain/janus_baseline_langchain/models/: __init__.py  debug.py  openai.py
baseline-langchain/janus_baseline_langchain/router/: __init__.py  chat_model.py  classifier.py  debug.py  models.py
baseline-langchain/janus_baseline_langchain/services/: __init__.py  artifacts.py  complexity.py  context.py  debug.py  memory.py  vision.py
baseline-langchain/janus_baseline_langchain/tools/: __init__.py  audio.py  code_exec.py  deep_research.py  files.py  git_tools.py  image_gen.py  memory.py  music_gen.py  robust.py  tts.py  video.py  web_search.py
baseline-langchain/tests/: conftest.py  test_agent.py  test_classifier.py  test_complexity.py  test_main.py  test_router.py  test_streaming_artifacts.py  test_tools.py
baseline-langchain/tests/e2e/: __init__.py  conftest.py  test_feature_parity.py  test_langchain_baseline.py  test_langchain_complex_tasks.py  test_langchain_memory.py  test_langchain_model_router.py
baseline-langchain/tests/integration/: test_tool_execution.py
baseline-langchain/tests/unit/: test_agent.py  test_generation_flags.py  test_memory_integration.py  test_memory_service.py  test_tool_schemas.py  test_tools.py
baseline/agent-pack/models/: llm.md  text-to-image.md  text-to-speech.md  text-to-video.md
baseline/janus_baseline/: __init__.py  config.py  main.py
baseline/janus_baseline/models/: openai.py
baseline/janus_baseline/prompts/: system.md
baseline/janus_baseline/services/: __init__.py  complexity.py  llm.py  sandy.py
baseline/tests/: test_complexity.py  test_health.py
bench/: README.md  pyproject.toml
bench/datasets/private/: .gitignore  README.md
bench/datasets/public/dev/: agentic.jsonl  chat.jsonl  code.jsonl  deep_research.jsonl  multimodal.jsonl  research.jsonl
bench/datasets/public/train/: agentic.jsonl  chat.jsonl  code.jsonl  deep_research.jsonl  multimodal.jsonl  research.jsonl
bench/janus_bench/: __init__.py  benchmarks.py  cli.py  config.py  janus_scoring.py  models.py  runner.py  streaming_metrics.py  tool_simulator.py
bench/janus_bench/adapters/: __init__.py  base.py  janus_cost.py  janus_multimodal.py  janus_research.py  janus_streaming.py  janus_tool_use.py  registry.py
bench/janus_bench/analysis/: __init__.py  compare_baselines.py  performance_report.py
bench/janus_bench/datasets/: __init__.py  loader.py
bench/janus_bench/datasets/data/janus/: cost_items.json  multimodal_items.json  research_items.json  streaming_items.json  tool_use_items.json
bench/janus_bench/evaluators/: __init__.py  base.py  citation_evaluator.py  code_evaluator.py  multimodal_evaluator.py  text_evaluator.py
bench/janus_bench/scorers/: __init__.py  clip_evaluator.py  composite.py  cost.py  cost_efficiency.py  multimodal.py  quality.py  research.py  speed.py  streaming.py  tool_use.py
bench/janus_bench/tests/: smoke_test.py
bench/results/: baseline-cli-20260124-hermes.json  baseline-cli-20260124-metrics.json  baseline-cli-20260124.json  baseline-cli-20260125-hermes-metrics.json  baseline-cli-20260125-hermes.json  baseline-comparison-20260124.json  baseline-comparison-20260125-hermes.json  baseline-langchain-20260124-metrics.json  baseline-langchain-20260124.json  baseline-langchain-20260125-hermes-metrics.json  baseline-langchain-20260125-hermes.json
bench/scripts/: generate_private_dataset.py  generate_public_dataset.py
bench/tests/: __init__.py  conftest.py  test_benchmarks.py  test_config.py  test_cost_efficiency.py  test_datasets.py  test_evaluators.py  test_multimodal_scoring.py  test_runner.py  test_scorers.py  test_streaming_metrics.py  test_tool_use_scorer.py
browser-session-service/: Dockerfile  README.md  pyproject.toml
browser-session-service/browser_session_service/: __init__.py  auth.py  config.py  crypto.py  database.py  main.py  models.py  schemas.py
browser-session-service/browser_session_service/routes/: __init__.py  sessions.py
browser-session-service/tests/: __init__.py  conftest.py  test_crypto.py  test_sessions.py
docs/: PERFORMANCE_TRACKING.md  architecture.md  browser-session-research-results.md  browser-user-session-pre-research.md  container-registry.md  runbook.md  squad-integration-research.md
docs2/: 01-architecture-overview.md  02-gateway.md  03-baseline-agents.md  04-chat-ui.md  05-benchmarking.md  related-projects.md
gateway/: .dockerignore  Dockerfile  README.md  pyproject.toml
logs/: ralph_codex_output_iter_10_20260123_180224.txt  ralph_codex_output_iter_10_20260123_184332.txt  ralph_codex_output_iter_10_20260124_191149.txt  ralph_codex_output_iter_11_20260123_181257.txt  ralph_codex_output_iter_11_20260123_185742.txt  ralph_codex_output_iter_11_20260124_195327.txt  ralph_codex_output_iter_12_20260123_185526.txt  ralph_codex_output_iter_12_20260123_191141.txt  (+83 more)
memory-service/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
memory-service/memory_service/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  utils.py
memory-service/memory_service/services/: __init__.py  llm.py  memory.py
memory-service/tests/: conftest.py  test_api.py  test_llm.py
scoring-service/: README.md  pyproject.toml  requirements.txt
scoring-service/scoring_service/: arena_elo.py  database.py  executor.py  main.py  models.py  repository.py  sandy.py  settings.py  utils.py
scoring-service/scoring_service/migrations/: 001_initial.sql  002_arena_votes.sql
scoring-service/tests/: conftest.py  test_api.py  test_arena_elo.py  test_executor.py
(+747 files in other folders)
