[project]
name = "janus-bench"
version = "0.1.0"
description = "Janus Benchmark Runner - Evaluation harness for Janus competitors"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "click>=8.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]
multimodal = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "pillow>=10.0.0",
]

[project.scripts]
janus-bench = "janus_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
include = ["janus_bench/datasets/data/**"]

[tool.hatch.build.targets.sdist]
include = ["janus_bench/datasets/data/**"]
